Version 1.5.2+svn:
 * language and i18n:
   * updated translations: 
 * user interface:
   * Make the load and recruit hotkey use the ctrl instead of cmd key on non
     Mac systems

Version 1.5.2:
 * campaigns:
   * Son of the Black Eye
     * new set of portrait art
     * in 'Black Flag', there's now several galleons transporting enemies to the
       beach, and no watch towers
     * in 'Saving Inarix', you can now more precisely control when you destroy
       the bridge
     * many assorted small tweaks to most scenarios
     * when leading the Great Horde, all units now require 1 less upkeep
   * Tutorial
     * Fixed players side name to same as leaders name (bug: #10114)
 * formula AI:
   * added variant_iterator to iterate over variant elements
   * modified choose, filter, find and map functions to use variant_iterator,
     so they work correctly with a variant_map type
   * new formula AI functions: contains_string, find_shroud, movement_cost,
     tolist, tomap, is_unowned_village, max_possible_damage_with_retaliation
   * added possibility to fallback to human player
   * new ai object members: side, my_recruits, recruits_of_side, time_of_day,
     units_of_side, villages_of_side
   * moved most of formula AI releated code from ai.cpp to formula_ai.cpp
   * new unit_type_callable and attack_type_callable classes
   * new unit_callable members: undead, attacks, abilities, traits
   * various fixes and improvements to formula functions
   * added new formula test scenario
 * language and i18n:
   * new translation: Latvian
   * updated translations: Arabic, Catalan, Chinese (Traditional), Czech,
     Finnish, French, German, Greek, Italian, Lithuanian, Russian, Serbian,
     Slovak
   * languages in the language selection are now sorted on name instead of
     code.
   * unit alignment can be displayed in its gender-specific form in languages
     which require/support it (bug #11956)
 * multiplayer: