@@ -873,15 +873,16 @@ int unit_type::experience_needed(bool with_acceleration) const
 	return experience_needed_;
 }
 
-
-
 const char* unit_type::alignment_description(unit_type::ALIGNMENT align, unit_race::GENDER gender)
 {
-	static const char* aligns[] = { N_("lawful"), N_("neutral"), N_("chaotic") };
-	static const char* aligns_female[] = { N_("female^lawful"), N_("female^neutral"), N_("female^chaotic") };
-	const char** tlist = (gender == unit_race::MALE ? aligns : aligns_female);
+	static const t_string aligns[] = 
+		{ _("lawful"), _("neutral"), _("chaotic") };
+	static const t_string aligns_female[] = 
+		{ _("female^lawful"), _("female^neutral"), _("female^chaotic") };
 
-	return (gettext(tlist[align]));
+	return gender == unit_race::MALE 
+		? aligns[align].c_str() 
+		: aligns_female[align].c_str();
 }
 
 const char* unit_type::alignment_id(unit_type::ALIGNMENT align)
