@@ -4,6 +4,8 @@ Version 1.5.2+svn:
  * user interface:
    * Make the load and recruit hotkey use the ctrl instead of cmd key on non
      Mac systems
+   * Fixed a broken translation which gave all females the prefix female^ on
+     alignment description
 
 Version 1.5.2:
  * campaigns:
